# solaforge-contract-templates

./: CONTRIBUTING.md  LICENSE  README.md
dao/proposal/: Cargo.toml  README.md
dao/proposal/docs/: ARCHITECTURE.md  SECURITY.md
dao/proposal/examples/: client.ts
dao/proposal/src/: lib.rs
dao/proposal/tests/: integration_test.rs
dao/treasury/: Cargo.toml  README.md
dao/voting/: Cargo.toml  README.md
defi/lending/overcollateralized/: Cargo.toml  README.md
defi/lending/overcollateralized/docs/: ARCHITECTURE.md  SECURITY.md
defi/lending/overcollateralized/examples/: client.ts
defi/lending/overcollateralized/src/: entrypoint.rs  lib.rs
defi/lending/overcollateralized/src/errors/: mod.rs
defi/lending/overcollateralized/src/instructions/: mod.rs
defi/lending/overcollateralized/tests/: integration_test.rs
defi/staking/single-token/: Cargo.toml
defi/staking/single-token/docs/: ARCHITECTURE.md  SECURITY.md
defi/staking/single-token/examples/: client.ts
defi/staking/single-token/src/: lib.rs
defi/staking/single-token/src/errors/: mod.rs
defi/staking/single-token/src/instructions/: mod.rs  processor.rs
defi/staking/single-token/src/state/: mod.rs
defi/staking/single-token/src/utils/: mod.rs
defi/staking/single-token/tests/: integration_test.rs
defi/yield-farming/: Cargo.toml  README.md
nft/dynamic-nft/: Cargo.toml  README.md
nft/nft-collections/: Cargo.toml  README.md
nft/nft-marketplace/: Cargo.toml
security/multisig/: Cargo.toml
security/multisig/docs/: ARCHITECTURE.md  SECURITY.md
security/multisig/examples/: client.ts
security/multisig/src/: lib.rs
security/multisig/src/errors/: mod.rs
security/multisig/src/instructions/: mod.rs  processor.rs
security/multisig/src/state/: mod.rs
security/multisig/src/utils/: mod.rs
security/multisig/tests/: integration_test.rs
tokens/spl-token/basic/: Cargo.toml
tokens/spl-token/basic/docs/: ARCHITECTURE.md  SECURITY.md
tokens/spl-token/basic/examples/: client.ts
tokens/spl-token/basic/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
tokens/spl-token/basic/tests/: integration_test.rs
(+105 files in other folders)
