[package]
name = "multisig-security"
version = "0.1.0"
description = "Multisig Security template for SolaForge"
edition = "2021"
license = "Apache-2.0"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.16.0"
thiserror = "1.0.40"
borsh = "0.10.3"
arrayref = "0.3.7"

[dev-dependencies]
solana-program-test = "1.16.0"
solana-sdk = "1.16.0"

[lib]
crate-type = ["cdylib", "lib"]
