[package]
name = "single-token-staking"
version = "0.1.0"
description = "Single-Token Staking template for SolaForge"
edition = "2021"
license = "Apache-2.0"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.16.0"
thiserror = "1.0.40"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.2", features = ["no-entrypoint"] }
borsh = "0.10.3"
arrayref = "0.3.7"

[dev-dependencies]
solana-program-test = "1.16.0"
solana-sdk = "1.16.0"

[lib]
crate-type = ["cdylib", "lib"]
