[package]
name = "spl-token-basic"
version = "0.1.0"
description = "Basic SPL Token implementation template for SolaForge"
edition = "2021"
license = "Apache-2.0"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.16.0"
thiserror = "1.0.40"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
borsh = "0.10.3"

[dev-dependencies]
solana-program-test = "1.16.0"
solana-sdk = "1.16.0"

[lib]
crate-type = ["cdylib", "lib"]
